--- a/front/src/app/actualizarproducto/actualizarproducto.page.html
+++ b/front/src/app/actualizarproducto/actualizarproducto.page.html
@@ -52,7 +52,7 @@
     <ion-col>
       <ion-item>
           <ion-label  position="floating">Nombre<ion-text color="danger">*</ion-text></ion-label>
-          <ion-input type="text" [(ngModel)]="nombre" required autocomplete ="off"></ion-input>
+          <ion-input type="text" [(ngModel)]="nom_producto" required autocomplete ="off"></ion-input>
       </ion-item>
     </ion-col>
   </ion-row>
