--- a/front/src/global.scss
+++ b/front/src/global.scss
@@ -31,6 +31,6 @@ ion-text{
 ion-title {
     color: #B7009B;
 }
-ion-button {
-    background-color: #FF5BE6;
-}
+// ion-button {
+//     background-color: #FF5BE6;
+// }
